Bug 100670 - Writer crashes
Summary: Writer crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.2.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.6
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-06-29 09:46 UTC by Matej K
Modified: 2016-12-27 14:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace.txt (8.28 KB, text/plain)
2016-07-04 11:12 UTC, Matej K
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matej K 2016-06-29 09:46:09 UTC
After print preview, exit preview and press F11 - writer crashes instantly. 
Happens on plain writer as well as in one with page of text.

This is my very first bug report, so let me know if i filled something wrong way or forgot sth. Thanks
Comment 1 Julien Nabet 2016-06-29 16:46:53 UTC
2 things you can do:
1) Rename your LO directory profile (see https://wiki.documentfoundation.org/UserProfile#Windows)
2) Give a try to brand new 5.1.4
Comment 2 Matej K 2016-06-30 05:58:22 UTC
So... renaming profile changed nothing, it still crashes. I tryed to repeat crash on another PC, with LO 5.1.2.2 version, running on Win10 (another pc in the office); it crashes too. But home, on LO 5.0.3.2. on Linux mint, its not.

I reinstalled version to latest 5.1.4.2 and easily repeared crash.

Note i probably should mention earlier: I do install x86 version of LO on x64 Windows, because x64 version caused some troubles in the past (on the matter of scanning devices and something else I cant remember).
Comment 3 Buovjaga 2016-07-02 11:45:33 UTC
You could try getting a backtrace of the crash: https://wiki.documentfoundation.org/How_to_get_a_backtrace_with_WinDbg
Comment 4 Julien Nabet 2016-07-02 12:30:52 UTC
Thank you for your feedback.
If you install x86 LO version, did you check you use Java 32 bits?

Indeeed, using x86 LO implies you should have Java 32 bits.
In the same way, using x86-64 LO implies you should have Java 64 bits.

Of it was not the case, please apply this piece of advice and rename your LO directory again so LO will search by itself the newly installed Java.
Comment 5 Matej K 2016-07-04 11:12:24 UTC
Created attachment 126059 [details]
backtrace.txt
Comment 6 Matej K 2016-07-04 11:13:15 UTC
> If you install x86 LO version, did you check you use Java 32 bits?
How can i check which version i have? in "about Java" i can only find its release no.(its "Version 8 Update 91 (build 1.8.0_01-b15)"), but not its architecture.
 
> Of it was not the case, please apply this piece of advice and rename your LO
> directory again so LO will search by itself the newly installed Java.
Which piece of advice? Im not generally sure what you ment by this, because i reinstalled older version to lates "release" version - 5.1.4.2. So i should rename LO user directory profile again and test it after renaming? 

Also, how is it so that no matter what architecture OS is, i always get x84 version offer on main download button (http://cs.libreoffice.org/download/)? It looks this way that its recommanded version to my OS. 
...i know i can choose other versions beneath the button.
Comment 7 Julien Nabet 2016-07-04 12:21:28 UTC
(In reply to Matej K from comment #6)
> > If you install x86 LO version, did you check you use Java 32 bits?
> How can i check which version i have? in "about Java" i can only find its
> release no.(its "Version 8 Update 91 (build 1.8.0_01-b15)"), but not its
> architecture.
>  
> > Of it was not the case, please apply this piece of advice and rename your LO
> > directory again so LO will search by itself the newly installed Java.
> Which piece of advice? Im not generally sure what you ment by this, because
> i reinstalled older version to lates "release" version - 5.1.4.2. So i
> should rename LO user directory profile again and test it after renaming? 
> 
> Also, how is it so that no matter what architecture OS is, i always get x84
> version offer on main download button (http://cs.libreoffice.org/download/)?
> It looks this way that its recommanded version to my OS. 
> ...i know i can choose other versions beneath the button.

Sorry about renaming your LO directory profile, I had overlooked you quoted you had already did it.
About knowing if you use Java 32 or 64, this link is interesting:
http://stackoverflow.com/questions/8825244/how-do-i-detect-whether-32-bit-java-is-installed-on-x64-windows-only-looking-at

Finally, let's put this one to NEW since there's a bt.
Comment 8 Matej K 2016-07-04 12:41:00 UTC
Based on where my Java is installed, i only have x86 version. Im sure i have not changed its default instalation path.
Comment 9 Caolán McNamara 2016-09-22 08:42:19 UTC
exact how-to-reproduce of this in 5-1 series is currently avoided because of...

commit e1e61bf5e5f368fc1ea579f8ae5eec9faafbd599
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Jun 3 11:06:22 2016 +0100

    Resolves: tdf#88396 switching to sidebar panel will toggle it *off*...

    if its already visible.

the crashing code was truly fixed by...

commit e964c55f463c5b9daeb41dbed6c330b40911c313
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Jan 29 18:52:34 2016 +0000

    implement missing FID_FUNCTION_BOX GetState

    since it was turned into a sidebar thing

this is fixed in master and 5-2, so setting as fixed. 5-1 backport of crash fix as https://gerrit.libreoffice.org/#/c/29170/
Comment 10 Commit Notification 2016-09-26 12:32:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6de338782529f65e3adb945a5e48cc6eb4f60603&h=libreoffice-5-1

Resolves: tdf#100670 Crash in: sfx2::sidebar::Panel::SetExpanded(bool)

It will be available in 5.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.