Resolves: tdf#100670 Crash in: sfx2::sidebar::Panel::SetExpanded(bool)

partial backport of

commit e964c55f463c5b9daeb41dbed6c330b40911c313
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Jan 29 18:52:34 2016 +0000

    implement missing FID_FUNCTION_BOX GetState

    since it was turned into a sidebar thing

exact how-to-reproduce of tdf#102045 is currently avoided because of...

commit e1e61bf5e5f368fc1ea579f8ae5eec9faafbd599
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Jun 3 11:06:22 2016 +0100

    Resolves: tdf#88396 switching to sidebar panel will toggle it *off*...

    if its already visible.

Change-Id: I17827488e49338a77ae55ba32a06415067123be8
Reviewed-on: https://gerrit.libreoffice.org/29170
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>